# magicblock-engine-examples

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc.json  LICENSE  README.md  check-prettier.sh  fullstack-test.sh  test-locally.sh  update-sdk-versions.sh
.claude/: settings.json
00-LEGACY_EXAMPLES/pinocchio-private-counter/: .env.example  .gitignore  Cargo.toml  README.md  package.json  vitest.config.ts
00-LEGACY_EXAMPLES/pinocchio-private-counter/src/: processor.rs  state.rs
ai-agent/: fly.toml  (+6 more)
ai-agent/llm_oracle/: Cargo.toml
ai-agent/llm_oracle/src/: main.rs  memory.rs
ai-agent/programs/agent-minter/: Cargo.toml
ai-agent/programs/agent-minter/src/: lib.rs
ai-agent/programs/simple-agent/: Cargo.toml
ai-agent/programs/simple-agent/src/: lib.rs
ai-agent/programs/solana-gpt-oracle/: Cargo.toml
ai-agent/programs/solana-gpt-oracle/src/: lib.rs
anchor-counter/programs/anchor-counter/: Cargo.toml
anchor-counter/programs/anchor-counter/src/: lib.rs
anchor-ephemeral-permission-counter/programs/private-counter/: Cargo.toml
anchor-ephemeral-permission-counter/programs/private-counter/src/: lib.rs
anchor-minter/integration-tests/: Cargo.toml
anchor-minter/integration-tests/tests/: magicsvm_minter.rs
anchor-minter/programs/token-minter/: Cargo.toml
anchor-minter/programs/token-minter/src/: lib.rs
anchor-rock-paper-scissor-1.0/programs/anchor-rock-paper-scissor/: Cargo.toml
anchor-rock-paper-scissor-1.0/programs/anchor-rock-paper-scissor/src/: lib.rs
anchor-rock-paper-scissor/programs/anchor-rock-paper-scissor/: Cargo.toml
anchor-rock-paper-scissor/programs/anchor-rock-paper-scissor/src/: lib.rs
anchor-rock-paper-scissor/rust/: Cargo.toml
anchor-rock-paper-scissor/rust/src/: lib.rs
binary-prediction/programs/binary-prediction/: Cargo.toml
binary-prediction/programs/binary-prediction/src/: error.rs  lib.rs  state.rs  utils.rs
counter/native-rust/: .gitignore  Cargo.toml  LICENSE  README.md  package.json
counter/native-rust/archive/: advanced-magic.ts
counter/native-rust/src/: entrypoint.rs  state.rs
counter/native-rust/tests/kit/: rust-counter.test.ts
counter/native-rust/tests/web3js/: rust-counter.test.ts  schema.ts
crank-counter/programs/crank-counter/: Cargo.toml
crank-counter/programs/crank-counter/src/: lib.rs
dummy-token-transfer/programs/dummy-transfer/: Cargo.toml
dummy-token-transfer/programs/dummy-transfer/src/: lib.rs
eata-pda-undelegate/programs/eata-pda-undelegate/: Cargo.toml
ephemeral-account-chats/programs/ephemeral-account-chats/: Cargo.toml
ephemeral-pricing-oracle/: .dockerignore  Cargo.toml  Dockerfile  README.md  fly-pyth.toml  fly.toml
ephemeral-pricing-oracle/program/ephemeral-oracle/: Anchor.toml
ephemeral-pricing-oracle/src/: args.rs  blockhash_cache.rs  instructions.rs  main.rs  types.rs
ephemeral-pricing-oracle/src/pyth_lazer/: chain_pusher.rs  price_parser.rs
ephemeral-pricing-oracle/src/stork/: chain_pusher.rs  price_parser.rs
ephemeral-pricing-oracle/workflows/: fly-deploy.yml
gachapon-example/programs/gachapon-example/: Cargo.toml
magic-actions-advanced/programs/magic-actions-advanced/: Cargo.toml
magic-actions-on-delegation/programs/magic-actions-on-delegation/: Cargo.toml
magic-actions/programs/magic-actions/: Cargo.toml
pinocchio-compressed-counter/: Cargo.toml  package.json  tsconfig.json
pinocchio-compressed-counter/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
pinocchio-compressed-counter/tests/: pinocchio-compressed-counter.test.ts
pinocchio-counter/: Cargo.toml  README.md  package.json
pinocchio-counter/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
pinocchio-counter/tests/: initializeKeypair.ts
pinocchio-counter/tests-rs/: delegate_counter.rs  increase_counter.rs  initialize_counter.rs  utils.rs
pinocchio-counter/tests/kit/: initializeKeypair.ts  pinocchio-counter.test.ts
pinocchio-counter/tests/web3js/: pinocchio-counter.test.ts
pinocchio-ephemeral-permission-counter/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
pinocchio-ephemeral-permission-counter/src/: entrypoint.rs  lib.rs  processor.rs  state.rs
pinocchio-ephemeral-permission-counter/tests/: pinocchio-ephemeral-permission-counter.test.ts  pinocchio-secret-counter.test.ts
pinocchio-private-counter/: Cargo.toml  README.md  package.json
pinocchio-private-counter/src/: entrypoint.rs  processor.rs  state.rs
pinocchio-private-counter/tests/: initializeKeypair.ts  pinocchio-private-counter.test.ts  schema.ts
pinocchio-private-counter/tests-rs/: delegate_counter.rs
pinocchio-private-counter/tests/kit/: initializeKeypair.ts  pinocchio-private-counter.test.ts  schema.ts
pinocchio-private-counter/tests/web3js/: initializeKeypair.ts  pinocchio-private-counter.test.ts
pinocchio-roll-dice/: Cargo.toml  README.md  package.json
pinocchio-roll-dice/programs/roll-dice-delegated/: Cargo.toml
pinocchio-roll-dice/scripts/: keys-sync.js
pinocchio-roll-dice/tests/: roll-dice-delegated.ts  roll-dice.ts  utils.ts
pinocchio-secret-counter/: Cargo.toml  package.json  tsconfig.json
pinocchio-secret-counter/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
pinocchio-secret-counter/tests-rs/: increase_counter.rs  utils.rs
pinocchio-secret-counter/tests/kit/: pinocchio-counter.test.ts  pinocchio-secret-counter.test.ts  schema.ts
pinocchio-secret-counter/tests/web3js/: pinocchio-counter.test.ts  pinocchio-secret-counter.test.ts
rust-counter/: .env  .gitignore  Cargo.toml  README.md  example.env  package.json  rust_counter-keypair.json  tsconfig.json  vitest.config.ts
rust-counter/archive/: rust-counter.ts
rust-counter/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
rust-counter/tests/: advanced-magic.ts  constants.ts  initializeKeypair.ts  magic-router.ts  rust-counter.ts  schema.ts
rust-counter/tests/kit/: advanced-magic.test.ts  initializeKeypair.ts  rust-counter.test.ts
rust-counter/tests/web3js/: advanced-magic.test.ts  initializeKeypair.ts  rust-counter.test.ts
(+813 files in other folders)
