[package]
name = "ephemeral-pricing-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
bigdecimal = "0.4.7"
borsh = { version = "1.5.3", features = ["derive"] }
bytes = "1.9.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4.3"
native-tls = "0.2.13"
ratchet_rs = { version = "1.2.1", features = ["deflate"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.135"
solana-client = "2.1.7"
solana-program = "2.1.7"
solana-sdk = "2.1.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
byteorder = "1.5.0"
base64 = "0.22.1"
