[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
pinocchio = { version = "0.10", features = ["cpi", "copy"] }
pinocchio-log = { version = "0.5" }
pinocchio-system = { version = "0.5" }
ephemeral-rollups-pinocchio = { git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git", rev = "4bf5e8c" }
