[package]
name = "rust-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
no-idl = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "1.5.7"
solana-program = "2.2.1"
ephemeral-rollups-sdk = "0.11.2"


[lib]
name = "rust_counter"
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
