[package]
name = "pinocchio-private-counter"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi", "copy"] }
pinocchio-log = { version = "0.5" }
pinocchio-system = { version = "0.5" }
ephemeral-rollups-pinocchio = { version = "0.14.3" }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
solana-pubkey = { version = "4.2.0", features = ["curve25519"] }

[dev-dependencies]
solana-instruction = "3.0.0"
solana-program = "4.0.0"
solana-program-test = "=3.0.2"
solana-pubkey = "4.0.0"
solana-signer = "3.0.0"
solana-transaction = "4.1.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }

[lib]
name = "pinocchio_private_counter"
crate-type = ["cdylib"]

[[test]]
name = "delegate_counter"
path = "tests-rs/delegate_counter.rs"

[[test]]
name = "increase_counter"
path = "tests-rs/increase_counter.rs"

[[test]]
name = "initialize_counter"
path = "tests-rs/initialize_counter.rs"
