[package]
name = "anchor-minter-integration"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate (not a member of the Anchor program workspace) so dependency resolution
# matches magicsvm / LiteSVM without merging the Solana 2.x graph from `programs/token-minter`.

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
litesvm = { git = "https://github.com/Dodecahedr0x/magicsvm.git", package = "litesvm" }
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"

[patch.crates-io]
solana-account = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }

[dev-dependencies]
solana-account = "3.4"
solana-address = "2.6"
solana-hash = "3.1"
solana-instruction = "3.4"
solana-keypair = "3.1"
solana-message = "3.1"
solana-native-token = "3.0"
solana-program-pack = "3.1"
solana-rent = "3.1"
solana-signer = "3.0"
solana-sysvar = "3.1"
solana-transaction = "3.1"
