[package]
name = "rust-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
no-idl = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "1.6.1"
solana-program = "4.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
ephemeral-rollups-sdk = { version = "0.16.2" }


[lib]
name = "rust_counter"
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
