[package]
name = "solana-gpt-oracle"
version = "0.1.0"
license = "MIT"
description = "Solana LLM Oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_gpt_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.2.1", features = ["anchor"] }
