[package]
name = "anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { path = "/Users/gabrielepicco/Documents/Solana/ephemeral-rollups-sdk/rust/sdk", features = ["anchor"] }
