[package]
name = "anchor-rock-paper-scissor"
version = "0.1.0"
description = "Created with Anchor 1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_rock_paper_scissor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.14.1", features = ["anchor", "access-control"] }
