[package]
name = "gachapon-example"
version = "0.1.0"
description = "Metaplex Core gachapon example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gachapon_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "=1.0.2", features = ["init-if-needed"] }
mpl-core = "=0.12.1"
